feat: improve JWT role conversion by handling null realm access and simplifying stream processing